k8s/webapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taskapp-deployment
  labels:
    app: taskapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: taskapp
  template:
    metadata:
      labels:
        app: taskapp
    spec:
      containers:
      - name: taskapp
        image: ghcr.io/x47base/taskapp:v2
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: taskapp-service
spec:
  type: NodePort
  selector:
    app: taskapp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30200
